fix contributor routes, add comments
