# backend/src/controllers/transactions.ts
@@ -122,6 +122,7 @@ const ensureValidTransaction = (data: any) => {
   return null;
 };
 
+// TODO: need to handle adding org, fund, and transaction to associated contributor object
 /**
  * Creates a new transaction in the database after performing necessary
  * validations.
@@ -189,21 +190,22 @@ const createTransaction = async (
     });
 
     // Determine whether to add or subtract the amount/units based on type
-    const amountUpdate = 
-    // Add the amount to organization if donation or investment; subtract if 
-    // otherwise (withdrawal, expense)
-      transactionData.type === "DONATION" || transactionData.type === "INVESTMENT"
+    const amountUpdate =
+      // Add the amount to organization if donation or investment; subtract if
+      // otherwise (withdrawal, expense)
+      transactionData.type === "DONATION" ||
+      transactionData.type === "INVESTMENT"
         ? { increment: transactionData.amount }
         : { decrement: transactionData.amount };
-    
+
     const unitsUpdate =
       transactionData.units !== undefined
-        ? transactionData.type === "DONATION" || transactionData.type === "INVESTMENT"
+        ? transactionData.type === "DONATION" ||
+          transactionData.type === "INVESTMENT"
           ? { increment: transactionData.amount }
           : { decrement: transactionData.amount }
         : undefined; // Don't update if units aren't found
 
-    
     // Update the organization's amount and units
     await prisma.organization.update({
       where: { id: transactionData.organizationId },
@@ -211,8 +213,8 @@ const createTransaction = async (
         amount: amountUpdate,
         units: unitsUpdate,
       },
-    })
-    
+    });
+
     return transaction;
   } catch (error) {
     if (error instanceof Error) {
@@ -257,8 +259,15 @@ const deleteTransaction = async (id: string): Promise<Transaction> => {
       throw new Error("Unable to locate transaction");
     }
     // update the associated organization's totals (units & amounts, based on transaction type)
-    const amountUpdated = transaction.type === "DONATION" || transaction.type === "INVESTMENT" ? {decrement: transaction.amount} : {increment: transaction.amount};
-    const unitsUpdated = transaction.units ? transaction.type === "DONATION" || transaction.type === "INVESTMENT" ? {decrement: transaction.units} : {increment: transaction.units}: undefined;
+    const amountUpdated =
+      transaction.type === "DONATION" || transaction.type === "INVESTMENT"
+        ? { decrement: transaction.amount }
+        : { increment: transaction.amount };
+    const unitsUpdated = transaction.units
+      ? transaction.type === "DONATION" || transaction.type === "INVESTMENT"
+        ? { decrement: transaction.units }
+        : { increment: transaction.units }
+      : undefined;
 
     if (transaction.organizationId) {
       await prisma.organization.update({
@@ -290,8 +299,8 @@ const deleteTransaction = async (id: string): Promise<Transaction> => {
 };
 
 /**
- * Retrieves all transactions for a specific organization with optional filtering,
- * sorting, and pagination.
+ * Retrieves all transactions for a specific organization with optional
+ * filtering, sorting, and pagination.
  *
  * @returns An object containing the transactions array and total count.
  * @throws If the organization does not exist, if query parameters are invalid,
@@ -310,7 +319,6 @@ const getOrganizationTransactions = async (
     order: "asc" | "desc";
   },
   pagination?: { skip?: number; take?: number }
-  
 ): Promise<{ transactions: Transaction[]; total: number }> => {
   try {
     // Validate organization exists
@@ -325,7 +333,7 @@ const getOrganizationTransactions = async (
     // Construct the where clause for filtering
     const where: Prisma.TransactionWhereInput = {
       organizationId: id,
-      ...(filter?.type && { type: filter.type }), 
+      ...(filter?.type && { type: filter.type }),
       ...(filter?.contributorId && { contributorId: filter.contributorId }),
       ...((filter?.startDate || filter?.endDate) && {
         date: {
@@ -333,17 +341,17 @@ const getOrganizationTransactions = async (
           ...(filter.endDate && { lte: filter.endDate }),
         },
       }),
-    };  
+    };
     // Get transactions and total count/number of transactions
     const [transactions, total] = await prisma.$transaction([
       prisma.transaction.findMany({
         where,
         orderBy: sort ? { [sort.field]: sort.order } : undefined,
-        skip: pagination?.skip || 0, 
-        take: pagination?.take || 100, 
+        skip: pagination?.skip || 0,
+        take: pagination?.take || 100,
         include: {
           contributor: true, // Include contributor details
-        }
+        },
       }),
       prisma.transaction.count({ where }), // Total count of transactions
     ]);
@@ -363,35 +371,36 @@ const getOrganizationTransactions = async (
   }
 };
 
-
 /**
- * Retrieves all transactions for a specific contributor with optional filtering,
- * sorting, and pagination.
+ * Retrieves all transactions for a specific contributor with optional
+ * filtering, sorting, and pagination.
  *
  * @returns An object containing the transactions array and total count.
  * @throws If the contributor does not exist, if query parameters are invalid,
  *   or if an unexpected error occurs.
  */
-async function getContributorTransactions(contributorId: string, filters: {
-  type?: string;
-  organizationId?: string;
-  startDate?: string;
-  endDate?: string;
-},
-sort?: SortOptions,
-pagination?: PaginationOptions
+async function getContributorTransactions(
+  contributorId: string,
+  filters: {
+    type?: string;
+    organizationId?: string;
+    startDate?: string;
+    endDate?: string;
+  },
+  sort?: SortOptions,
+  pagination?: PaginationOptions
 ) {
   //Validate contributor exists
   const contributor = await prisma.contributor.findUnique({
-    where: { id: contributorId}, 
-    select: {id: true} ,
+    where: { id: contributorId },
+    select: { id: true },
   });
   if (!contributor) {
     //contributor not found = 404
     throw new Error("Contributor not found.");
   }
   //setting up the filter
-  const where: Prisma.TransactionWhereInput = { contributorId};
+  const where: Prisma.TransactionWhereInput = { contributorId };
 
   if (filters.type) {
     where.type = filters.type as TransactionType;
@@ -400,8 +409,8 @@ pagination?: PaginationOptions
   if (filters.organizationId) {
     where.organizationId = filters.organizationId;
     const organization = await prisma.contributor.findUnique({
-      where: { id: filters.organizationId}, 
-      select: {id: true} ,
+      where: { id: filters.organizationId },
+      select: { id: true },
     });
     if (!organization) {
       //organization not found = 404
@@ -418,10 +427,9 @@ pagination?: PaginationOptions
       if (filters.endDate) {
         where.date.lte = new Date(filters.endDate);
       }
-    }
-    catch (e){
+    } catch (e) {
       //Invalid Query Input
-      throw new Error("Invalid Date Format.")
+      throw new Error("Invalid Date Format.");
     }
   }
 
